<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Helsinki Timetables</string>
    <string name="vehicle_type_bus">Bus</string>
    <string name="vehicle_type_train">Train</string>
    <string name="vehicle_type_metro">Metro</string>
    <string name="vehicle_type_tram">Tram</string>
    <string name="vehicle_type_farry">Ferry</string>
    <string name="vehicle_type_u_lines">U-lines</string>
    
    <string name="header_trips_directions">Trip directions for %1$s</string>
    <string name="header_trips">All trips for %1$s</string>
    <string name="header_stations" formatted="false">All stations of %s line \"%s\"</string>
    <string name="header_times" formatted="false">Route \"%s\"\nStation \"%s\"</string>
    <string name="header_one_trip">All stations of the one trip \"%s\"</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="wizard">Wizard</string>
    <string name="wizard_page_one">Welcome to Helsinki Timetables!</string>
    <string name="wizard_page_one_text"><b>Welcome to Helsinki Timetables!</b>\n\n This wizard will help you to start using this application.</string>
    <string name="wizard_page_two_text">Firstly, you need to load the database with all Helsinki routes times. Please, select the way you prefer to download the data:</string>
    <string name="wizard_page_two_radio_auto_text">&lt;b&gt;Automatically.&lt;/&gt;&lt;br /&gt; Let the application downloads database by itself.</string>
    <string name="wizard_page_two_radio_manu_text">&lt;b&gt;Manually.&lt;/&gt;&lt;br /&gt;  You may download the database by yourself and put it on the SD card.</string>
    <string name="wizard_page_two">Import data method</string>
    <string name="wizard_page_three">Importing</string>
    <string name="wizard_import_request_metadata">Request metadata&#8230;</string>
    <string name="wizard_import_disk_space">Disc space&#8230;</string>
    <string name="wizard_import_downloaded">Downloaded: </string>
    <string name="wizard_import_downloading">Downloading&#8230;</string>
    <string name="wizard_import_old_database">Delete old database&#8230;</string>
    <string name="wizard_import_old_bookmarks">Cache old bookmarks&#8230;</string>
    <string name="wizard_import_correct_bookmarks">Restore bookmarks&#8230;</string>
    <string name="wizard_import_verify">Verifying&#8230;</string>
    <string name="wizard_import_ok">[OK]</string>
    <string name="wizard_import_error">[ERROR]</string>
    <string name="wizard_import_finished_success">Importing is finished successfully. You can continue using the application.</string>
    <string name="wizard_import_finished_failure">Import ends with errors. Importing failed.</string>
    <string name="wizard_page_automatically_imprting_chosen">You have chosen to import database automatically. \n</string>
    <string name="wizard_page_automatically_imprting">Application will download the database by itself. Please, make sure, that your phone is connected to the WiFi network or unlimited mobile internet, because database is quite big and downloading will cause the high network traffic.</string>
    <string name="wizard_page_manally_imprting">You have chosen to import database manually. &lt;br /&gt;&lt;br /&gt; It means, that you will download the file from site by yourself and will pull it to the SD card. Please, visit the&lt;br /&gt;&lt;br /&gt; &lt;i&gt;http://hsl.2rooms.net/download.html&lt;/i&gt;&lt;br /&gt;&lt;br /&gt; and follow instructions.</string>
    <string name="wizard_page_three_button_start">Start importing</string>
    <string name="wizard_page_four">Widget</string>
    <string name="wizard_page_four_text">Don\'t forget to use our widget!\n\n Firstly, you should create a new bookmarks before, then add it to your desktop.</string>
    <string name="wizard_page_five">Wizard is finished.</string>
    <string name="wizard_page_five_finished">Finished. \n\n Now you may use the Helsinki Timetables application every day.\n\nGood luck!</string>
    <string name="wizard_page_five_need_importing">Wizard is finished. \n\nWhen you press button \"Finish\" the application will exit. Then you should to put the database file to the SD-card and on the next start up the application will perform it for you and then you may use it every day. \n\nGood luck!</string>
    <string name="processing">Processing&#8230;</string>
    <string name="loading_descr">Making the query</string>
    <string name="mon_fri">Mon-Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="unzip_process_title">Extracting&#8230;</string>
    <string name="unzip_process_descr">Found database in folder \"hsl\". Please, wait while the application extracts the files. It may take some time.</string>
    <string name="unzip_result_fail_extract">Sorry, extracting process ended with error (fail during extract operation).</string>
    <string name="unzip_result_fail_in">Sorry, extracting process ended with error (fail during file opening).</string>
    <string name="unzip_result_ok">Archive was extracted successfully.</string>
    <string name="search_field_hint">Type to search</string>
    <string name="search">Search</string>
    <string name="stations_list_of_trips_header">All possible trips for station \"%s\"</string>
    <string name="menu_add_bookmark">Add new bookmark</string>
    <string name="menu_delete_bookmark">Delete</string>
    <string name="menu_update">Update</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_name">Set custom name for bookmark:</string>
    <string name="bookmarks_image">Set custom image, associated with this bookmark:</string>
    <string name="bookmarks_you_dont_have_bookmarks">You still don\'t have any bookmarks. To add this, please, choose \"Add Bookmarks\" from menu or press the button below.</string>
    <string name="dialog_confirm_delete_bookmarks">Delete the bookmark \"%s\"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="widget_there_is_no_data">You don\'t have any bookmarks saved. Please go to the HSL application and create new one.</string>
    <string name="widget_bookmark_is_empty">There are no trips for this bookmark at this moment.</string>
    <string name="err_msg_db_corrupted">Database is corrupted. This error may occur, if database was downloaded incorrectly or your SD-card is damaged. Try to manually remove database file and upload it to SD-card once again. Instruction you find here: \n\n http://hsl.2rooms.net/download.html</string>
    <string name="err_msg_db_file_adsent">Database file is absent</string>
    <string name="err_msg_no_sdcard">SD-card is not mounted</string>
    <string name="err_msg_cant_open_db">Can\'t open database</string>
    <string name="err_msg_db_is_empty">The database is empty</string>
    <string name="err_msg_sql_error">Error in SQL</string>
    <string name="error">Error.</string>
    <string name="metadata_header">Information about available database.</string>
    <string name="metadata_export_date">Timetables from:</string>
    <string name="metadata_db_size">Database size:</string>
    <string name="metadata_err">Can\'t retrieve the database information. Please check the Internet connection.</string>
    <string name="metadata_warn_size_big">Warning! We do not recommend to download this database! Reason:\n%s \nTry to update it once again on the next week.</string>
    <string name="unzip_result_fail_do_you_want">Do you want to delete the corrupted file from the SD-card?</string>
    <string name="are_you_sure_interrupt_downloading">You are going to interrupt the import. The downloaded file will be removed. Are you sure?</string>
</resources>