<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	    <Button
	    	android:layout_width="fill_parent"
	    	android:clickable="false"
	    	android:layout_height="wrap_content"
	    	android:text="@string/app_name"
	    	android:textColor="@color/dark_white"
	    	android:textStyle="bold"
	    	android:background="@drawable/breadcrumbs_last_repeatable"/>
   		<ScrollView
   			android:layout_width="fill_parent"
   			android:layout_height="fill_parent">
			<LinearLayout 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="vertical">   				
					<LinearLayout 
						android:id="@+id/TableRow01"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:orientation="horizontal">
							<Button
								android:id="@+id/btnBus"
								style="@style/VehicleButton.Top"
								android:drawableTop="@drawable/button_bus"
								android:text="@string/vehicle_type_bus"/>
							<Button
								android:id="@+id/btnTrain"
								style="@style/VehicleButton.Top"
								android:text="@string/vehicle_type_train"
								android:drawableTop="@drawable/button_train"/>
							<Button
								android:id="@+id/btnMetro"
								style="@style/VehicleButton.Top"
								android:text="@string/vehicle_type_metro"
								android:drawableTop="@drawable/button_metro"/>
					</LinearLayout>
					<LinearLayout
						android:id="@+id/TableRow02" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:orientation="horizontal">
							<Button
								android:id="@+id/btnTramm"
								style="@style/VehicleButton.Middle"
								android:text="@string/vehicle_type_tram"
								android:drawableTop="@drawable/button_tram" />
							<Button
								android:id="@+id/btnFerry"
								style="@style/VehicleButton.Middle"
								android:text="@string/vehicle_type_farry"
								android:drawableTop="@drawable/button_farry"/>
							<Button
								android:id="@+id/btnUlines"
								style="@style/VehicleButton.Middle"
								android:text="@string/vehicle_type_u_lines"
								android:drawableTop="@drawable/button_u_lines"/>
					</LinearLayout>
					<LinearLayout 
						android:id="@+id/TableRow03" 
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:orientation="horizontal">
							<Button
								android:id="@+id/btnStations"
								style="@style/VehicleButton.Bottom"
								android:text="@string/search"
								android:drawableTop="@drawable/button_station"/>
							<Button
								android:id="@+id/btnBookmarks"
								style="@style/VehicleButton.Bottom"
								android:drawableTop="@drawable/button_bookmarks"
								android:text="@string/bookmarks"/>
							<Button
								android:id="@+id/btnUpdate"
								style="@style/VehicleButton.Bottom"
								android:drawableTop="@drawable/button_update"
								android:text="@string/menu_update" />
					</LinearLayout>
			</LinearLayout>
		</ScrollView>
</LinearLayout>